--- a/src/index.css
+++ b/src/index.css
@@ -43,9 +43,12 @@ h3 {
   text-align: center;
   display: inline-block;
   opacity: 1 !important;
-  border-radius: 18px;
-  color: #fff;
+  color: #000000;
   text-decoration: none;
+}
+
+.round-button:hover {
+  box-shadow: 24px 16px 100px 0px rgba(165, 165, 165, 0.5);
 }
 
 .round-button.transparent {
@@ -60,31 +63,17 @@ h3 {
 }
 
 .round-button.orange {
+  font-weight: bold;
   width: 186px;
   line-height: 48px;
-  background: #fe815f;
+  background: #ffffff;
   box-shadow: 0px 5px 21px -2px rgba(255, 161, 20, 0.25);
   border-radius: 24px;
   font-size: 18px;
   position: relative;
   z-index: 1;
 }
-.round-button.orange::after {
-  content: "";
-  position: absolute;
-  left: -3px;
-  top: -3px;
-  width: 192px;
-  height: 54px;
-  background-color: rgba(254, 129, 95, 0.5);
-  border-radius: 26px;
-  z-index: -1;
-  opacity: 0;
-  transition: opacity 0.3s;
-}
-.round-button.orange:hover::after {
-  opacity: 1;
-}
+
 .round-button.border {
   width: 214px;
   line-height: 48px;
@@ -98,7 +87,7 @@ h3 {
   z-index: 1;
 }
 .round-button.border:hover {
-  background: rgba(255, 255, 255, 0.3);
+  background: rgba(255, 0, 0, 0.3);
 }
 
 .main {
@@ -669,7 +658,7 @@ footer .right .footer-links a:nth-last-child(1)::after {
   display: flex;
   align-items: center;
   gap: 4px;
-  color: var(--r-neutral-body, #3e495e);
+  color: #c2c2c2;
   margin-left: auto;
   text-align: right;
   font-size: 18px;
@@ -698,7 +687,7 @@ footer .right .footer-links a:nth-last-child(1)::after {
   font-size: 12px;
   line-height: 14px;
   text-align: center;
-  color: #525966;
+  color: #dddddd;
   margin-bottom: 36px;
   margin-right: 58px;
   width: 62px;
@@ -1169,7 +1158,7 @@ footer .right .footer-links a:nth-last-child(1)::after {
     font-weight: 400;
     font-size: 12px;
     line-height: 14px;
-    color: #525966;
+    color: #d3d3d3;
     margin-bottom: 30px;
   }
   .contact-us .card {
