--- a/src/page/update-extension/style.module.scss
+++ b/src/page/update-extension/style.module.scss
@@ -1,9 +1,9 @@
 .container {
-  background: #f5f6fa;
+  background: #000000;
   min-height: 100vh;
   --box-pl: 100px;
-  background-color: #ffffff;
   font-family: "Roboto", sans-serif;
+  color: #ffffff;
 }
 
 .introBox {
