--- a/src/page/chain-dashboard/components/style.module.scss
+++ b/src/page/chain-dashboard/components/style.module.scss
@@ -1,12 +1,10 @@
 .page {
-  background: var(--r-neutral-bg2, #1c1f2b);
+  background: #000000;
   min-height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Roboto,
     "PingFang SC", "Microsoft Yahei", sans-serif;
+  color: #ffffff;
 
-  background-size: contain;
-
-  position: relative;
   &::after {
     position: fixed;
     top: 0;
@@ -14,7 +12,7 @@
     width: 100%;
     height: 100%;
     content: "";
-    background: var(--r-neutral-bg2, #1c1f2b);
+    background: #000000;
     z-index: -1;
   }
 }
