--- a/src/page/metamask/style.module.css
+++ b/src/page/metamask/style.module.css
@@ -1,7 +1,8 @@
 .container {
-  background: #f5f6fa;
+  background: #000000;
   min-height: 100vh;
   --box-pl: 100px;
+  color: #ffffff;
 }
 
 .center {
