--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 html, body {
   background-color: #000000;
   color: #ffffff;
+  font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, "SF Pro", "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
 }
 
 body {
@@ -897,9 +898,10 @@ footer .right .footer-links a:nth-last-child(1)::after {
     display: none;
   }
   body {
-    background-position: top right 50%;
-    background-image: url(https://rabby.io/assets/images/bg-mobile.png);
-    background-size: 1280px 900px;
+    background-color: #000000;
+    background-image: none;
+    max-width: 100vw;
+  overflow-x: hidden;
   }
   header {
     height: 900px;
@@ -1311,4 +1313,14 @@ footer .right .footer-links a:nth-last-child(1)::after {
   animation-delay: 250ms;
   animation-duration: 0.4s;
 }
+
+
+
+
+
+
+
+
+
+
 
