--- a/src/index.css
+++ b/src/index.css
@@ -59,15 +59,13 @@ h3 {
 }
 
 .round-button.orange {
-  font-weight: bold;
-  width: 186px;
-  line-height: 48px;
-  background: #ffffff;
-  box-shadow: 0px 5px 21px -2px rgba(255, 161, 20, 0.25);
-  border-radius: 24px;
-  font-size: 18px;
-  position: relative;
-  z-index: 1;
+  width: 120px;
+  line-height: 33px;
+  font-size: 14px;
+}
+
+.round-button.orange:after {
+  display: none;
 }
 
 .round-button.border {
@@ -345,16 +343,23 @@ header {
   align-self: center;
 }
 .intro-content .intro-title {
-  color: #000;
+  color: white;
+  background-color: black;
+  border: none;
+  box-shadow: 0 0 0 0.5px white;
+  padding: 10px 20px;
   font-weight: 900;
   text-transform: uppercase;
   font-size: 18px;
   display: inline-block;
-  padding: 13px 25px;
-  background-color: #fff;
-  box-shadow: inset 0px -20px 20px rgba(0, 0, 0, 0.02);
-  border-radius: 30px;
 }
+
+/* Optional: Add hover effect */
+.intro-title:hover {
+  background-color: #333; /* Slightly lighter black on hover */
+  transition: background-color 0.3s ease; /* Smooth transition for hover effect */
+}
+
 .intro-content h3 {
   color: #e7e7e7;
   margin-bottom: 12px;
@@ -467,12 +472,12 @@ footer .left .debank-logo::after {
   background-color: #c4c4c4;
 }
 footer .left .debank-logo,
-footer .left .rabby-logo {
+footer .left .luxlogo.png {
   position: relative;
   padding-left: 18px;
   padding-right: 18px;
 }
-footer .left .rabby-logo {
+footer .left .luxlogo.png {
   width: 164px;
   padding-left: 0;
   padding-right: 0;
@@ -1313,6 +1318,14 @@ footer .right .footer-links a:nth-last-child(1)::after {
   animation-delay: 250ms;
   animation-duration: 0.4s;
 }
+
+
+
+
+
+
+
+
 
 
 
